<resources>
    <string name="google_maps_key">AIzaSyDBG4AJQnoKJLlFmLRJoKXecySNfeVuY8w</string>

    <!-- Login Fragment  -->
    <string name="app_name">FamilyMap</string>
    <string name="Host">Server Host: </string>
    <string name="Port">Server Port: </string>
    <string name="UserName">User Name: </string>
    <string name="Password">Password: </string>
    <string name="FirstName">First Name: </string>
    <string name="LastName">Last Name: </string>
    <string name="Email">Email: </string>
    <string name="Gender">Gender: </string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="SignIn">Sign In</string>
    <string name="Register">Register</string>

    <string name="ToastLogin">Logging In</string>
    <string name="ToastRegister">Registering</string>


    <!-- Proxy Server -->
    <string name="LoginUrl">/user/login</string>
    <string name="RegisterUrl">/user/register</string>
    <string name="EventUrl">/event</string>
    <string name="PersonUrl">/person</string>
    
    <!-- Map Menu -->
    <string name="MenuSearch">Search</string>
    <string name="MenuFilter">Filter</string>
    <string name="MenuSettings">Settings</string>

</resources>
